--- a/index.html
+++ b/index.html
@@ -14,9 +14,6 @@
       </h1>
       <nav>
         <ul>
-          <!-- <li>
-            <a href="#impetus">IMPETUS</a>
-          </li> -->
           <li>
             <a href="#gathering">GATHERING</a>
           </li>
@@ -74,21 +71,6 @@
     </section>
     <!-- end header -->
 
-    <!-- "what we do" start - <section> -->
-    <!-- <section id="what-we-do" class="intro">
-      <div class="flex-row">
-        <h2 class="section-title primary-border">
-          What We Do
-        </h2>
-      </div>
-      <div class="flex-row">
-        <p>
-          butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct trade  Blue Bottle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie Odd Future Austin fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flannel meggings narwhal Marfa Schlitz sustainable Intelligentsia umami deep v craft
-        </p>
-      </div>
-    </section> -->
-    <!-- end "what we do" -->
-
     <!-- "gathering" start -->
     <section id="gathering" class="senses">
       <div class="flex-row">
@@ -102,10 +84,6 @@
           <div class="sense-img">
             <img src="./assets/images/bench.jpg" alt="" />
           </div>
-          <!-- <div class="sense-text">
-            <h4>Fill Out The Form Above</h4>
-            <p>You're already here, so why not?</p>
-          </div> -->
         </div>
       </div>
       <div class="sense">
@@ -114,10 +92,6 @@
           <div class="sense-img">
             <img src="./assets/images/sun.jpg" alt="" />
           </div>
-          <!-- <div class="step-text">
-            <h4>Consult With One Of Our Trainers</h4>
-            <p>Are you here to build muscle, lose weight, or just feel good?</p>
-          </div> -->
         </div>
       </div>
       <div class="sense">
@@ -126,10 +100,6 @@
           <div class="sense-img">
             <img src="./assets/images/reflection.jpg" alt="" />
           </div>
-          <!-- <div class="sense-text">
-            <h4>Get Running</h4>
-            <p>Hit the ground running (literally) once your trainer lays out your plan.</p>
-          </div> -->
         </div>
       </div>
       <div class="sense">
@@ -138,53 +108,10 @@
           <div class="sense-img">
             <img src="./assets/images/run buddy.jpg" alt="" />
           </div>
-          <!-- <div class="sense-text">
-            <h4>See Results</h4>
-            <p>Bi-weekly checkins with your trainer will keep you focused</p>
-          </div> -->
         </div>
       </div>
     </section>
     <!-- "gathering" end -->
-
-    <!-- "meet the trainers" start -->
-    <!-- <section id="your-trainers">
-      <div class="flex-row">
-        <h2 class="section-title primary-border">
-          Meet The Trainers
-        </h2>
-      </div>
-
-      <div class="trainers">
-        <article class="trainer">
-          <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
-          <div class="trainer-bio">
-            <h3 class="trainer-name">Arron Stephens</h3>
-            <h4 class="trainer-role">Speed / Strength</h4>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!</p>
-          </div>
-        </article>
-
-        <article class="trainer">
-          <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a work out" />
-          <div class="trainer-bio">
-            <h3 class="trainer-name">Joanna Gill</h3>
-            <h4 class="trainer-role">Endurance</h4>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!</p>
-            </div>
-          </article>
-
-        <article class="trainer">
-          <img src="./assets/images/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights" />
-          <div class="trainer-bio">
-            <h3 class="trainer-name">Harry "The Headband" Smith</h3>
-            <h4 class="trainer-role">Strength</h4>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!</p>
-          </div>
-        </article>
-      </div>
-    </section> -->
-    <!-- "meet the trainers" end -->
 
     <!-- "connect" start -->
     <section id="connect" class="contact">
@@ -229,9 +156,6 @@
         </div>
         
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3166596.5310769947!2d84.69080820949051!3d28.037698929717294!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39e854a215bd9ebd%3A0x576dcf806abbab2!2sMt%20Everest!5e0!3m2!1sen!2sus!4v1629005867954!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-        <!-- <iframe
-          src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d12182.30520634488!2d-74.0652613!3d40.2407219!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1561060983193!5m2!1sen!2sus"
-          frameborder="0" style="border:0" allowfullscreen> -->
         </iframe>
       </div>
     </section>
@@ -240,9 +164,7 @@
     <!-- footer -->
     <footer>
       <h2>❤️ Made with love by kOLNA.</h2>
-      <!-- <div>
-        <a href="./privacy-policy.html">Read Our Privacy Policy</a><br/> -->
-        &copy; 2021 kOLNA - A GAATHERING WELL
+        &copy; 2021 kOLNA - A GATHERING WELL
       </div>
     </footer>
     <!-- footer end -->
