--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- navigation tags - block level element -->
     <header>
       <h1>
-        <a href="/">kOLNA - A GATHERING WELL</a>
+        <a href="https://lifeatinfinitum.github.io/kolna-a-gathering-place/">kOLNA - A GATHERING WELL</a>
       </h1>
       <nav>
         <ul>
